Adicionando CSS para o portifólio

--- a/curso.html
+++ b/curso.html
@@ -10,44 +10,42 @@
 </head>
 <body>
   <div class="container">
-    <div class="navbar">  
-      <nav class="nav">
-        <a class="navbrand" id="brand" href="index.html"><h1>Meu Portifólio</h1></a>
-          <ul>
-            <li><a class="navbrand" href="skills.html">Minhas Habilidades</a></li>
-            <li><a class="navbrand" href="curso.html">Onde Estudo</a></li>
-          </ul>    
+    <div>  
+      <nav class="navs">
+        <h1><a id="brand" href="index.html">Portifólio<a></h1>          
+            <a class="navbrand" href="skills.html">Minhas Habilidades</a>
+            <a class="navbrand" href="curso.html">Onde Estudo</a>
       </nav>
     </div>  
     <header class="header">
         
       <img class="img" src="https://avatars.githubusercontent.com/u/82051093?v=4" alt="">
 
-        <div class="course">
-            <h1>Onde estou estudando:</h1>
-            <h2>-Trybe</h2>
-            <hr>
-            <p>Em 2019, Matheus criou a Trybe, uma escola de programação na qual os alunos só pagam depois de arrumar emprego. Já são 700 estudantes matriculados, e a Trybe atraiu fundos que investiram US$ 15,7 milhões na startup.
-            <!-- Leia mais em: https://vocesa.abril.com.br/empreendedorismo/na-trybe-escola-de-programacao-o-aluno-so-paga-quando-estiver-empregado/ --> </p>
-            <p>A Trybe oferece uma formação de alta qualidade, alinhada com as necessidades do mercado. Para montar a grade curricular do curso, foi conversado com mais de 50 empresas. Os alunos recebem 1.500 horas de formação ao longo de um ano e, além da parte técnica, desenvolve-se soft skills [como relações interpessoais].</p>
-            <p>Habilidades que o aluno tem ao término do curso são diversar, tendo como exemplo:
-                <li>1- JavaScript</li>
-                <li>2- HTML</li>
-                <li>3- Python</li>
-                <li>4- SQL</li>
-                <li>5- React</li>
-                <li>6- Algoritmos e estrutura de dados</li>
-                <li>7- Node.js</li>
-                <li>8- Git</li>
-                <li>9- Express.js</li>
-                <li>10- CSS</li>
-                <li>11- ORM</li>
-                <li>12- NoSQL</li>
-            </p>
-        </div>
-        
+      <div class="course">
+        <h1>Onde estou estudando:</h1>
+        <h2>-Trybe</h2>
+        <hr>
+        <p>Em 2019, Matheus criou a Trybe, uma escola de programação na qual os alunos só pagam depois de arrumar emprego. Já são 700 estudantes matriculados, e a Trybe atraiu fundos que investiram US$ 15,7 milhões na startup.
+         <!-- Leia mais em: https://vocesa.abril.com.br/empreendedorismo/na-trybe-escola-de-programacao-o-aluno-so-paga-quando-estiver-empregado/ --> </p>
+        <p>A Trybe oferece uma formação de alta qualidade, alinhada com as necessidades do mercado. Para montar a grade curricular do curso, foi conversado com mais de 50 empresas. Os alunos recebem 1.500 horas de formação ao longo de um ano e, além da parte técnica, desenvolve-se soft skills [como relações interpessoais].</p>
+        <p>Habilidades que o aluno tem ao término do curso são diversar, tendo como exemplo:</p>
+          <ul class="taught">
+            <li class="each">1- JavaScript</li>
+            <li class="each">2- HTML</li>
+            <li class="each">3- Python</li>
+            <li class="each">4- SQL</li>
+            <li class="each">5- React</li>
+            <li class="each">6- Algoritmos e estrutura de dados</li>
+            <li class="each">7- Node.js</li>
+            <li class="each">8- Git</li>
+            <li class="each">9- Express.js</li>
+            <li class="each">10- CSS</li>
+            <li class="each">11- ORM</li>
+            <li class="each">12- NoSQL</li>
+          </ul>
+      </div>
     </header>
-
+  </div>  
 
   
 
