--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="navbar">  
-      <nav class="nav">
-        <a class="navbrand" id="brand" href="index.html"><h1>Meu Portifólio</h1></a>
-          <ul>
-            <li><a class="navbrand" href="skills.html">Minhas Habilidades</a></li>
-            <li><a class="navbrand" href="curso.html">Onde Estudo</a></li>
-          </ul>    
+    <div>  
+      <nav class="navs">
+        <h1><a href="index.html" id="brand">Portifólio</a></h1>         
+            <a class="navbrand" href="skills.html">Minhas Habilidades</a>
+            <a class="navbrand" href="curso.html">Onde Estudo</a>    
       </nav>
     </div>  
     <header class="header">
@@ -45,6 +43,7 @@
 
 
     </header>
+  </div>  
 
 
   
