--- a/skills.html
+++ b/skills.html
@@ -10,46 +10,40 @@
 </head>
 <body>
   <div class="container">
-    <div class="navbar">  
-      <nav class="nav">
-        <a class="navbrand" id="brand" href="index.html"><h1>Meu Portifólio</h1></a>
-          <ul>
-            <li><a class="navbrand" href="skills.html">Minhas Habilidades</a></li>
-            <li><a class="navbrand" href="curso.html">Onde Estudo</a></li>
-          </ul>    
+    <div> 
+      <nav class="navs">
+         <h1><a id="brand" href="index.html">Portifólio</a></h1>          
+            <a class="navbrand" href="skills.html">Minhas Habilidades</a>
+            <a class="navbrand" href="curso.html">Onde Estudo</a>
       </nav>
     </div>  
     <header class="header">
         
       <img class="img" src="https://avatars.githubusercontent.com/u/82051093?v=4" alt="">
 
-        <div class="skills">  
-            <h3><strong>Minhas habilidades pessoais:</strong></h3>
-            <ul>
-            <li>1- Flexibilidade. Tenho atitude para lidar com imprevistos.</li>
-            <li>2- Parseverante. Não desisto até encontrar alguma resolução.</li>
-            <li>3- Trabalho em Equipe. Gosto de colaborar com outras pessoas.</li>
-            <li>4- Criativo. Pensar em formas alternativas para resolver contratempos.</li>
-            <li>5- Entusiasmado. Muito animado para/com assuntos que me interessam.</li>
-            <li>6- Determinado. Vou atrás dos meus objetios, não espero que eles "caem do céu".</li>
-            </ul>
-            <h3>Habilidades profissionais:</h3>
-            <ul>
-                <li>1- Git</li>
-                <li>2- Bash</li>
-                <li>3- Unix</li>
-                <li>4- HTML</li>
-                <li>5- CSS</li>
-                <li>6- JavaScript</li>
-            </ul>
-        </div>  
-
-        <hr>
-
-
-
-    </header>
-
+      <div class="skills">  
+        <h3><strong>Minhas habilidades pessoais:</strong></h3>
+        <ul>
+          <li>1- Flexibilidade. Tenho atitude para lidar com imprevistos.</li>
+          <li>2- Parseverante. Não desisto até encontrar alguma resolução.</li>
+          <li>3- Trabalho em Equipe. Gosto de colaborar com outras pessoas.</li>
+          <li>4- Criativo. Pensar em formas alternativas para resolver contratempos.</li>
+          <li>5- Entusiasmado. Muito animado para/com assuntos que me interessam.</li>
+          <li>6- Determinado. Vou atrás dos meus objetios, não espero que eles "caem do céu".</li>
+        </ul>
+        <h3>Habilidades profissionais:</h3>
+          <ul>
+            <li>1- Git</li>
+            <li>2- Bash</li>
+            <li>3- Unix</li>
+            <li>4- HTML</li>
+            <li>5- CSS</li>
+            <li>6- JavaScript</li>
+          </ul>
+      </div> 
+      <hr>
+    </header> 
+  </div>
 
   
 
