--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <style>
+    body {
+      background-color: #000;
+      line-height: 30px;
+      list-style-type: none;
+      font-size: 18px;
+      margin: 50px;
+    }
+
+    .container {
+        background-color: #8B8982;
+    }
+
+    .navs {
+        background-color: #373F47;
+        padding: 1px;
+        height: 100px;
+    }
+
+    ul li {
+        list-style-type: none;
+    }
+
+    #brand {
+        text-decoration: none;
+        color: #fff;
+        position: absolute;
+        font-size: 40px;
+        padding: 5px 5px;
+    }
+
+    .navbrand {
+        line-height: 20px;
+        display: flex;
+        flex-direction: column;
+        text-align: end;
+        text-decoration: none;
+        font-size: 1.2rem;
+        color: #fff;
+        position: relative;
+        top: 35px;
+    }
+
+    .taught {
+        text-decoration: underline;
+        flex-wrap: wrap;
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        margin: 0;
+        line-height: 40px;
+        margin-left: 50px;
+    }
+
+    .each {
+        margin: 20px;
+    } 
+    </style>
 </head>
 <body>
   <div class="container">
