--- a/curso.html
+++ b/curso.html
@@ -63,6 +63,18 @@
     .each {
         margin: 20px;
     } 
+
+    @media (max-width: 560px) {
+    img {
+        width: 50%;
+    }
+    .navbrand {
+        font-size: 0.9rem;
+    }
+    #brand {
+        font-size: 25px;
+    }
+}
     </style>
 </head>
 <body>
