--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ ul li {
   display: flex;
   flex-direction: column;
   text-align: end;
-  text-decoration: none;
   font-size: 1.2rem;
   color: #fff;
   position: relative;
@@ -55,6 +54,7 @@ header {
   box-shadow: 3px 10px 10px rgba(0,0,0,0.4);
 }
 
+
 hr {
   top: 200px;
   position: relative;
@@ -63,6 +63,7 @@ hr {
 img {
   box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
   width: 20%;
+  border-radius: 50%;
 }
 
 .me {
@@ -171,7 +172,7 @@ img {
       <img class="img" src="https://avatars.githubusercontent.com/u/82051093?v=4" alt="">
 
         <div class="me">
-            <h3 class="py-2">Oi, meu nome é <strong>Gabriel Takaki Junkes.</strong></h3> 
+            <h2>Oi, meu nome é <strong>Gabriel Takaki Junkes.</strong></h2> 
             <i>
             <p>Nesta foto, eu estava com a minha família em um restaurante da cidade da qual eu me encontro, que é  Balneário Camboriú, localizada em Santa Catarina, Brasil.</p>
             <p>Conheci a programação há alguns meses atrás, e me identifiquei imediatamente. Desde criança sou facinado por tecnologia, e me perguntava como que os jogos, aplicativos e sites que eu vistava eram feitos. E a resposta é que a programação está por trás de quase tudo! e hoje, tendo 18 anos, procuro ter muito sucesso nessa minha nova caminhada!</p> <p>Pelo fato de poder facilitar e ajudar muitas pessoas ao mesmo tempo, por meio da programação me chama muita atenção também.</p> 
