--- a/curso.html
+++ b/curso.html
@@ -58,6 +58,7 @@ header {
 img {
     box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
     width: 20%;
+    border-radius: 50%;
   }
 
   .course {
@@ -121,14 +122,14 @@ img {
         width: 20%;
     }
     .course {
-        top: 7%;
+        top: 12%;
         font-size: 16px;
         line-height: 20px;
-        max-width: 750px;
+        max-width: 700px;
     }
     .taught {
         position: relative;
-        top: 12%;
+        top: 17%;
     }
     .each {
         margin: 13px;
@@ -154,14 +155,45 @@ img {
         top: 10%;
         font-size: 15px;
         line-height: 20px;
-        max-width: 710px;
+        max-width: 550px;
     }
     .taught {
         position: relative;
-        top: 17%;
+        top: 19%;
     }
     .each {
         margin: 10px;
+    }
+}
+
+
+@media (max-width: 866px) {
+    .navbrand {
+        top: 1%;
+        font-size: 10px;
+    }
+    .navs {
+        height: 60px;
+    }
+    .header {
+        height: 350px;
+    }
+    img {
+        width: 20%;
+    }
+    .course {
+        top: 11%;
+        font-size: 13px;
+        line-height: 16px;
+        max-width: 450px;
+    }
+    .taught {
+        position: relative;
+        top: 25%;
+    }
+    .each {
+        font-size: 14px;
+        margin: 6px;
     }
 }
 
@@ -184,7 +216,7 @@ img {
         top: 10%;
         font-size: 13px;
         line-height: 16px;
-        max-width: 500px;
+        max-width: 450px;
     }
     .taught {
         position: relative;
