--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ ul li {
 }
 
 header {
-  height: 900px;
+  height: 800px;
   box-shadow: 3px 10px 10px rgba(0,0,0,0.4);
 }
 
 
 hr {
-  top: 200px;
+  top: 25%;
   position: relative;
 }
 
@@ -69,8 +69,9 @@ img {
 .me {
   top: 15%;
   position: absolute;
-  max-width: 810px;
+  width: 70%;
   left: 25%;
+  overflow: auto;
 }
 
 .passatempo {
@@ -80,18 +81,12 @@ img {
 }
 
 @media (max-width: 1145px) {
-  .me {
-    max-width: 500px;
-    font-size: 15px;
-    top: 12%;
-    line-height: 30px;
-  }
   .header {
     height: 700px;
   }
-  hr {
-    top: 26%;
-  }
+  .me {
+    font-size: 16px;
+  }  
 }
 
 
@@ -103,7 +98,7 @@ img {
         top: 13%;
     }
     .header {
-        height: 700px;
+        height: 600px;
     }
     hr {
         top: 30%;
@@ -131,10 +126,10 @@ img {
         font-size: 15px;
     }
     .header {
-        height: 700px;
+        height: 600px;
     }
     hr {
-        top: 28%;
+        top: 35%;
     }
 }
 
