--- a/skills.html
+++ b/skills.html
@@ -6,158 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <style>
-   body {
-    background-color: rgb(201, 201, 201);
-    line-height: 30px;
-    list-style-type: none;
-    font-size: 18px;
-    margin: 50px;
-}  
-
-  .container {
-      background-color: #8B8982;
-}
-
-  .navs {
-      background-color: #373F47;
-      padding: 1px;
-      height: 100px;
-}
-
-  ul li {
-      list-style-type: none;
-}
-
-  #brand {
-      text-decoration: none;
-      color: #fff;
-      position: absolute;
-      font-size: 40px;
-      padding: 5px 5px;
-}
-
-  .navbrand {
-      line-height: 20px;
-      display: flex;
-      flex-direction: column;
-      text-align: end;
-      font-size: 1.2rem;
-      color: #fff;
-      position: relative;
-      top: 35px;
-}
-
-header {
-    height: 400px;
-    box-shadow: 3px 10px 10px rgba(0,0,0,0.4);
-    border-radius: 5px;
-  }
-
-img {
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
-    width: 20%;
-    border-radius: 50%;
-  }
-
-.personal {
-    top: 15%;
-    position: absolute;
-    max-width: 810px;
-    left: 23%;
-}
-
-.professional {
-    top: 15%;
-    position: absolute;
-    right: 20%;
-}
-
-@media (max-width: 1500px) {
-    .header {
-        height: 300px;
-    }
-    img {
-        width: 20%;
-    }
-    .professional {
-        top: 10%;
-        font-size: 17px;
-        line-height: 30px;
-        left: 68%;
-    }
-    .personal {
-        top: 10%;
-        font-size: 17px;
-        line-height: 30px;
-        max-width: 5000px;
-    }
-}
-
-  @media (max-width: 1024px) {
-    .navbrand {
-        top: 1%;
-        font-size: 10px;
-    }
-    .navs {
-        height: 60px;
-    }
-    .header {
-        height: 300px;
-    }
-    img {
-        width: 20%;
-    }
-    .professional {
-        top: 10%;
-        font-size: 14px;
-        line-height: 20px;
-        max-width: 8000px;
-        left: 68%;
-    }
-    .personal {
-        top: 10%;
-        font-size: 14px;
-        line-height: 20px;
-        max-width: 450px;
-    }
-}
-
-
-@media (max-width: 768px) {
-    .navbrand {
-        top: 1%;
-        font-size: 10px;
-    }
-    .navs {
-        height: 60px;
-    }
-    .header {
-        height: 250px;
-    }
-    img {
-        width: 20%;
-    }
-    .professional {
-        top: 10%;
-        font-size: 12px;
-        line-height: 15px;
-        left: 71%;
-    }
-    .personal {
-        top: 10%;
-        font-size: 12px;
-        line-height: 15px;
-        max-width: 300px;
-        left: 25%;
-    }
-}
-
-
-
-
-    </style>
+    <link rel="stylesheet" href="skills.css">
 </head>
 <body>
   <div class="container">
