--- a/curso.html
+++ b/curso.html
@@ -6,227 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="curso.css">
     <style>
- body {
-    background-color: rgb(201, 201, 201);
-    line-height: 30px;
-    list-style-type: none;
-    font-size: 18px;
-    margin: 50px;
-}  
-
-  .container {
-      background-color: #8B8982;
-}
-
-  .navs {
-      background-color: #373F47;
-      padding: 1px;
-      height: 100px;
-}
-
-  ul li {
-      list-style-type: none;
-}
-
-  #brand {
-      text-decoration: none;
-      color: #fff;
-      position: absolute;
-      font-size: 40px;
-      padding: 5px 5px;
-}
-
-  .navbrand {
-      line-height: 20px;
-      display: flex;
-      flex-direction: column;
-      text-align: end;
-      font-size: 1.2rem;
-      color: #fff;
-      position: relative;
-      top: 35px;
-}
-
-header {
-    height: 550px;
-    box-shadow: 3px 10px 10px rgba(0,0,0,0.4);
-    border-radius: 5px;
-  }
-
-img {
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
-    width: 20%;
-    border-radius: 50%;
-  }
-
-  .course {
-    top: 15%;
-    position: absolute;
-    max-width: 900px;
-    left: 25%;
-    display: wrap;
-    flex-wrap: wrap;
-  }
-
-  .taught {
-      display: flex;
-      flex-wrap: wrap;
-      text-decoration: underline;
-  }
-
-  .each {
-      color: #fff;
-      position: relative;
-      left: 0;
-      margin: 30px;
-      
-} 
-
-@media (max-width: 1700px) {
-    .header {
-        height: 500px;
-    }
-    img {
-        width: 20%;
-    }
-    .course {
-        top: 10%;
-        font-size: 20px;
-        line-height: 20px;
-        max-width: 1000px;
-    }
-    .taught {
-        position: relative;
-        top: 10%;
-    }
-    .each {
-        margin: 15px;
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 1406px) {
-    .navbrand {
-        top: 8%;
-        font-size: 16px;
-    }
-    .navs {
-        height: 70px;
-    }
-    .header {
-        height: 450px;
-    }
-    img {
-        width: 20%;
-    }
-    .course {
-        top: 12%;
-        font-size: 16px;
-        line-height: 20px;
-        max-width: 700px;
-    }
-    .taught {
-        position: relative;
-        top: 17%;
-    }
-    .each {
-        margin: 13px;
-        font-size: 16px;
-    }
-}
-
-  @media (max-width: 1024px) {
-    .navbrand {
-        top: 1%;
-        font-size: 10px;
-    }
-    .navs {
-        height: 60px;
-    }
-    .header {
-        height: 400px;
-    }
-    img {
-        width: 20%;
-    }
-    .course {
-        top: 10%;
-        font-size: 15px;
-        line-height: 20px;
-        max-width: 550px;
-    }
-    .taught {
-        position: relative;
-        top: 19%;
-    }
-    .each {
-        margin: 10px;
-    }
-}
 
 
-@media (max-width: 866px) {
-    .navbrand {
-        top: 1%;
-        font-size: 10px;
-    }
-    .navs {
-        height: 60px;
-    }
-    .header {
-        height: 350px;
-    }
-    img {
-        width: 20%;
-    }
-    .course {
-        top: 11%;
-        font-size: 13px;
-        line-height: 16px;
-        max-width: 450px;
-    }
-    .taught {
-        position: relative;
-        top: 25%;
-    }
-    .each {
-        font-size: 14px;
-        margin: 6px;
-    }
-}
-
-
-@media (max-width: 768px) {
-    .navbrand {
-        top: 1%;
-        font-size: 10px;
-    }
-    .navs {
-        height: 60px;
-    }
-    .header {
-        height: 350px;
-    }
-    img {
-        width: 20%;
-    }
-    .course {
-        top: 10%;
-        font-size: 13px;
-        line-height: 16px;
-        max-width: 450px;
-    }
-    .taught {
-        position: relative;
-        top: 26%;
-    }
-    .each {
-        font-size: 14px;
-        margin: 6px;
-    }
-}
 
 
 
