--- a/index.html
+++ b/index.html
@@ -6,92 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <style>
-      body {
-    line-height: 30px;
-    list-style-type: none;
-    font-size: 25px;
-    margin: 50px;
-    background-color: rgb(201, 201, 201);
-  }
-  
-  .container {
-    background-color: #8B8982;
-    border: 1px solid #fff;
-  }
-  
-  .navs {
-    background-color: #373F47;
-    padding: 1px;
-    border: 1px solid #fff;
-  }
-  
-  ul li {
-    list-style-type: none;
-  }
-  
-  #brand {
-    color: #fff;
-    position: absolute;
-    font-size: 40px;
-    padding: 0px 5px;
-    text-decoration: none;
-    margin-top: -30px;
-  }
-  
-  .navbrand {
-    color: #fff;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 15px 5px;
-    line-height: 2px;
-    font-size: 16px;
-  }
-  
-  header {
-    height: 700px;
-    box-shadow: 3px 10px 10px rgba(0,0,0,0.6);
-  }
-  
-  .name {
-    font-size: 30px;
-    text-decoration: underline;
-  }
-  
-  .name:hover {
-    transform: scale(0.98);
-    cursor: default;
-  }
-  
-  
-  img {
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.6);
-    width: 20%;
-    border-radius: 50%;
-  }
-  
-  .me {
-    top: 15%;
-    position: absolute;
-    width: 70%;
-    left: 25%;
-    overflow: auto;
-  }
-  
-  .passatempo {
-    bottom: 15%;
-    position: absolute;
-    max-width: 80vw;
-  }
-  
-  li a {
-    color: #fff;
-  }
-  
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
